syntax = "proto3";

package protos;

import "common.proto";
import "pipeline.proto";

option go_package = "github.com/streamdal/snitch-protos/build/go/protos";

// Command is used by snitch-server for sending commands to SDKs
message Command {
  // Who is this command intended for?
  protos.Audience audience = 1;

  oneof command {
    protos.AttachPipelineCommand attach_pipeline = 100;
    protos.DetachPipelineCommand detach_pipeline = 101;
    protos.PausePipelineCommand pause_pipeline = 102;
    protos.ResumePipelineCommand resume_pipeline = 103;
    protos.KeepAliveCommand keep_alive = 104;
  }
}

message AttachPipelineCommand {
  protos.Pipeline pipeline = 1;
}

message DetachPipelineCommand {
  string pipeline_id = 1;
}

message PausePipelineCommand {
  string pipeline_id = 1;
}

message ResumePipelineCommand {
  string pipeline_id = 1;
}

message KeepAliveCommand {
  // Nothing needed in here, just a ping from server to SDK
}
